# urban-green-analytics-2

./: .env.example  .gitattributes  .gitignore  agg_daily_farm_metrics.ipynb  docker-compose.yaml  load_dim_crop.ipynb  pr_template.txt  pyproject.toml
api/: .env.example  Dockerfile  pyproject.toml
api/app/: config.py  database.py  enums.py  helpers.py  main.py  mixins.py  models.py  schemas.py  settings.py
api/app/constants/: roles.py
api/app/core/: config.py  security.py  superuser.py
api/app/crud/: helpers.py  users.py
api/app/crud/crops/: crop.py  crop_category.py  farm_crop.py
api/app/crud/farms/: farm.py  growing_system_type.py  infrasctructure_type.py  infrastructure_type.py
api/app/crud/harvests/: harvest.py  quality_grade.py
api/app/crud/sensors/: sensor.py  sensor_type.py
api/app/crud/users/: role.py  user.py  user_roles.py
api/app/dependencies/: auth.py
api/app/models/: __init__.py  audit.py  common.py  crop.py  crop_categories.py  crop_category.py  crops.py  enums.py  farm.py  farm_crop.py  farm_crops.py  farm_infrastructure_type.py  farm_infrastructure_types.py  farms.py  growing_system_type.py  growing_system_types.py  harvest.py  harvests.py  infrastructure.py  mixins.py  quality_grade.py  quality_grades.py  role.py  roles.py  sensor.py  sensor_type.py  sensor_types.py  sensors.py  timestamp_mixin.py  user.py  user_role.py  user_roles.py  users.py  utils.py
api/app/models/common/: audit.py
api/app/models/crops/: crop.py  crop_category.py  farm_crop.py
api/app/models/farms/: farm.py  farm_status.py  growing_system_type.py  infrastructure_type.py
api/app/models/harvests/: harvest.py  quality_grade.py
api/app/models/sensors/: sensor.py  sensor_status.py  sensor_type.py
api/app/models/users/: role.py  user.py  user_roles.py
api/app/repositories/: __init__.py  base_repository.py
api/app/repositories/crops/: crop.py  crop_category.py  farm_crop.py
api/app/repositories/farms/: farm.py  growing_system_type_repository.py  infrastructure_type.py
api/app/repositories/harvests/: harvest.py  harvest_repository.py  quality_grade.py
api/app/repositories/sensors/: sensor.py  sensor_type.py
api/app/repositories/users/: role.py  user.py  user_role.py
api/app/routers/: __init__.py  api.py  helpers.py  users.py
api/app/routers/crops/: crop.py  crop_categories.py  crop_category.py  crops.py  farm_crop.py  farm_crops.py
api/app/routers/farms/: farm.py  farms.py  (+4 more)
api/app/schemas/: __init__.py  audit.py  auth.py  base.py  common.py  crop.py  crop_categories.py  crop_category.py  crops.py  farm.py  farm_crop.py  farm_crops.py  farm_infrastructure_type.py  farm_infrastructure_types.py  farms.py  growing_system.py  growing_system_type.py  growing_system_types.py  harvest.py  harvests.py  infrastructure.py  quality_grade.py  quality_grades.py  role.py  roles.py  sensor.py  sensor_type.py  sensor_types.py  sensors.py  user.py  user_role.py  user_roles.py  users.py
api/app/security/: authorization.py  dependencies.py  hashing.py  jwt.py  password.py  rbac.py  roles.py  superuser.py
api/app/services/: auth.py  auth_service.py  base_service.py  common.py  scoped_service.py  superuser_service.py
api/tests/: TEST_GUIDE.md  conftest.py  test_database.py  test_integration.py  test_models.py  test_models_and_schemas.py  test_orm_models.py  test_orm_pydantic_integration.py  test_schemas.py  test_update_schemas.py
api/tests/api/: test_crop.py  test_crop_category.py  test_farm.py  test_farm_crop.py  test_growing_system_type.py  test_harvest.py  test_infrastructure_type.py  test_quality_grade.py  test_role.py  test_sensor.py  test_sensor_type.py  test_user.py  test_user_roles.py
api/tests/core/: test_config.py  test_database.py  test_main.py
api/tests/crud/: test_farm.py
api/tests/dependencies/: test_auth.py
api/tests/integrations/: test_farm_flow.py  test_harvest_flow.py  test_user_flow.py
api/tests/models/: test_audit.py  test_crop.py  test_crops.py  test_farm.py  test_farms.py  test_harvest.py  test_harvests.py  test_role.py  test_sensor.py  test_sensor_type.py  test_sensors.py  test_user.py  test_user_role.py  test_users.py
api/tests/repositories/: test_base.py  test_crops.py  test_farms.py  test_harvests.py  test_sensors.py  test_users.py
api/tests/routers/: conftest.py  test_auth.py  test_auth_access.py  test_authorization.py  test_crop.py  test_crop_categories.py  test_crop_category.py  test_crops.py  test_farm.py  test_farm_crop.py  test_farm_crops.py  test_farms.py  test_growing_system_type.py  test_growing_system_types.py  test_harvest.py  test_harvests.py  test_infrastructure_type.py  test_infrastructure_types.py  test_pagination.py  test_quality_grade.py  test_quality_grades.py  test_role.py  test_roles.py  test_sensor.py  test_sensor_type.py  test_sensor_types.py  test_sensors.py  test_user.py  test_user_role.py  test_user_roles.py  test_users.py
api/tests/schemas/: test_audit.py  test_crop.py  test_crop_category.py  test_crops.py  test_farm.py  test_farms.py  test_harvest.py  test_harvests.py  test_sensor.py  test_sensors.py  test_users.py
api/tests/security/: test_auth.py  test_dependencies.py  test_jwt.py  test_password.py  test_superuser.py
api/tests/services/: test_auth.py  test_auth_service.py  test_base.py  test_bootstrap.py  test_crops.py  test_farms.py  test_harvests.py  test_sensors.py  test_superuser_service.py  test_users.py
api/tests/units/: test_farm_flow.py  test_harvest_flow.py  test_user_flow.py
(+394 files in other folders)
