[project]
name = "urban-green-analytics"
version = "1.0.0"
description = "Urban Green Analytics Platform"
requires-python = ">=3.10.0"

# Airflow runtime dependencies (mirrors infra/airflow/requirements.txt)
# Note: apache-airflow itself is managed in the Airflow Dockerfile
dependencies = [
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-amazon",
    "pyarrow",
    "pandas",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "build", "dist", "migrations", "venv"]

[tool.ruff.lint]
# A reasonable starter set
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "N",   # pep8-naming
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports for re-exports
