[project]
name = "urban-green-analytics"
version = "0.1.0"
description = "Urban Green Analytics Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow-providers-amazon>=9.31.0",
    "apache-airflow-providers-postgres>=6.8.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]
