[project]
name = "urban-green-api"
version = "1.0.0"
description = "FastAPI application for Urban Green Farms"
requires-python = ">=3.10.0"

dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.115",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
] # Add more dependencies

# Optional
[project.optional-dependencies]
dev = ["pytest", "ruff"]


[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "migrations"]

[tool.ruff.lint]
# A reasonable starter set
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
    "B", # flake8-bugbear
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "C4", # flake8-comprehensions
    "N", # pep8-naming
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports for re-exports
"tests/conftest.py" = ["E402"]   # sys.path + env must be set before app imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
]
