[project]
name = "urban-green-api"
version = "1.0.0"
description = "FastAPI application for Urban Green Farms"
requires-python = ">=3.10.0"

dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.115",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.50",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "N",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
]